# cse220_sp24_hw2

./: .gitignore  CMakeLists.txt  run_sanitizer.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: hw2.h
src/: hw2_main.c
tests/src/: tests_aux.cpp  tests_image_operations.cpp  tests_valgrind.cpp
